Add xtc init command to unified Launcher architecture
- Add InitializerOptions to LauncherOptions.java with CLI schema
- Refactor Initializer.java to use new Launcher<T> pattern
- Add CMD_INIT to Launcher.java COMMANDS map and launch() switch
- Update showHelp() to include init command
- Fix InitializerTest to use isError() instead of private field
- Add comprehensive XTC CLI documentation (doc/XTC_CLI.md)
- Link CLI docs from main README

The xtc init command now works like other commands (build, run, test):
  xtc init myapp                    # Create application
  xtc init mylib --type=library     # Create library
  xtc init myproj --multi-module    # Create multi-module project

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>